--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,3 +37,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
 }
+
+configurations.all {exclude group: 'com.android.support', module: 'support-v13'}
